--- a/app/public/assets/css/sb-admin.css
+++ b/app/public/assets/css/sb-admin.css
@@ -78,6 +78,8 @@ input[type="range"]::-moz-range-thumb {
 
 #submitSurvey {
   margin-top: 32px;
+  color: white;
+  text-transform: uppercase;
 }
 
 .scroll-to-top:focus, .scroll-to-top:hover {
