--- a/app/public/assets/css/sb-admin.css
+++ b/app/public/assets/css/sb-admin.css
@@ -68,6 +68,10 @@ input[type="range"]::-webkit-slider-thumb {
   border-radius: 13px;
 }
 
+.modal img {
+  max-width: 100%;
+}
+
 input[type="range"]::-moz-range-thumb {
   width: 25px;
   height: 25px;
