--- a/app/public/assets/css/sb-admin.css
+++ b/app/public/assets/css/sb-admin.css
@@ -515,6 +515,10 @@ footer.sticky-footer {
   line-height: 55px;
 }
 
+footer.sticky-footer a {
+  color: gray;
+}
+
 @media (min-width: 992px) {
   footer.sticky-footer {
     width: calc(100% - 250px);
